Bug 594769 - qcms fails to compile on mingw r=jmuizelaar a=joe